--- a/_data/index.yml
+++ b/_data/index.yml
@@ -5,7 +5,7 @@ cards:
             <br><br>
             Le GUI utilizzano il framework Swing, mentre le WebApp sono implementate
             con le Servlet oppure con il framework Spring Boot.
-    link: ./linguaggi/php.html
+    link: ./linguaggi/java.html
     type: card
   - title: Php
     image: ./img/loghi/logoPhp.PNG
