--- a/_data/python.yml
+++ b/_data/python.yml
@@ -1,31 +1,32 @@
 cards1:
   - title: Agenzia immobiliare
     image: ../img/card-progetti/immobiliare.PNG
-    content: Web app Flask gestisce il sito di un'agenzia immobiliare permettendo all'utente di inserire 
+    content: Web app Flask che gestisce il sito di un'agenzia immobiliare permettendo all'utente di inserire 
              i propri annunci ed al gestore di approvarli.
     link: ../progetti/python/immobiliare.html
     type: proj-card card
   - title: Ristorante
     image: ../img/card-progetti/ristorante.PNG
-    content: Web app Flask gestisce gli ordini di un ristorante ed implementa anche un'area statistiche per il gestore.
+    content: Web app Flask per ricevere e gestire gli ordini di un ristorante. Implementa anche un'area statistiche per il gestore.
     link: ../progetti/python/ristorante.html
     type: proj-card card
   - title: Supermercato
     image: ../img/card-progetti/supermercato.PNG
     content: Web app Flask che gestisce gli ordini per un supermercato online 
-             ed implementa una sezione utente ed una gestore con reportistica.
+             ed implementa una sezione utente ed una gestore per la reportistica.
     link: ../progetti/python/supermercato.html
     type: proj-card card
 cards2:
   - title: Concessionaria
     image: ../img/card-progetti/concessionaria.PNG
-    content: Web app Flask che gestisce gli ordini per un supermercato online 
-             ed implementa una sezione utente ed una gestore con reportistica.
+    content: GUI Tkinter per gestire gli ordini di una concessionaria.
+             <br>
+             Implementa un'area utente per gli ordini ed una gestore per le statistiche.
     link: ../progetti/python/concessionaria.html
     type: proj-card card
   - title: Gestione magazzino
     image: ../img/card-progetti/magazzino.PNG
-    content: GUI TKinter per la gestione del magazzino di un negozio.
+    content: GUI Tkinter per la gestione del magazzino di un negozio.
     link: ../progetti/python/magazzino.html
     type: proj-card card
   - title: Bancomat GUI
@@ -36,7 +37,7 @@ cards2:
 cards3:
   - title: Distributore GUI
     image: ../img/card-progetti/distributoreTkinter.PNG
-    content: GUI TKinter che simula distributore di bevande gestendo anche le chiavette dei clienti.
+    content:  GUI Tkinter per gestire un distributore di bevande ed i conti dei clienti.
     link: ../progetti/python/distributore-tkinter.html
     type: proj-card card
   - title: Bancomat Console
@@ -46,6 +47,6 @@ cards3:
     type: proj-card card
   - title: Distributore Console
     image: ../img/card-progetti/distributorePython.PNG
-    content: GUI Tkinter per la gestione di un distributore di bevande e dei conti dei clienti.
+    content: Programma console che simula distributore di bevande gestendo anche le chiavette dei clienti.
     link: ../progetti/python/distributore-console.html
     type: proj-card card
