Added yaml file to contain highlighted projects

--- a/_data/php.yml
+++ b/_data/php.yml
@@ -1,5 +1,5 @@
 cards:
-  - title: Analisi di bilancio
+  - title: Analisi di bilancio - IN LAVORAZIONE
     image: ../img/card-progetti/bilanci.PNG
     content: Web app che analizza bilanci ed incorpora anche un blog.
             <br>
